<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">晓生活</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_input_account">邮箱/手机号</string>
    <string name="login_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_dialog_account">账&#160;&#160;&#160;号:</string>
    <string name="login_dialog_phone_number">手机号:</string>
    <string name="login_dialog_account_hint">输入账号</string>
    <string name="login_dialog_phone_hint">输入手机号</string>
    <string name="login_dialog_btn_validate_num">获取验证码</string>
    <string name="login_dialog_password">密&#160;&#160;&#160;码:</string>
    <string name="login_dialog_validate_num">验证码:</string>
    <string name="login_dialog_password_hint">输入密码</string>
    <string name="login_dialog_password_hint_again">再次输入密码</string>
    <string name="login_dialog_reg">注册帐号</string>
    <string name="reg">注册</string>
    <string name="login_dialog_have_account">已有帐号</string>
    <string name="login_dialog_forget_psd">忘记密码</string>
    <string name="login_dialog_login">登  录</string>
    <string name="login_dialog_rememberPW">记住密码:</string>
    <string name="login_dialog_autoLogin">自动登录:</string>
    <string name="login_dialog_rememberMe">记住我</string>
    <string name="main_menu_login">用户登录</string>
    <string name="main_menu_logout">注销登录</string>
    <string name="main_menu_myinfo">我的资料</string>
    <string name="main_menu_pub_lost">失物</string>
    <string name="main_menu_diary">新鲜事</string>
    <string name="main_menu_pub_market">商品</string>
    <string name="main_menu_picshow">显示图片</string>
    <string name="main_menu_picnoshow">隐藏图片</string>
    <string name="main_menu_cache">清除缓存</string>
    <string name="main_menu_email">意见反馈</string>
    <string name="main_menu_about">关于我们</string>
    <string name="main_menu_ask">资讯</string>
    <string name="main_menu_exit">退出程序</string>
    <string name="drop_dowm">下拉刷新</string>
    <string name="release_update">松开刷新</string>
    <string name="loading">正在加载。。。</string>
    <string name="seen_more">更多</string>
    <string name="frame_title_main_news">资讯</string>
    <string name="frame_title_main_lost">失物</string>
    <string name="frame_title_main_diary">新鲜事</string>
    <string name="frame_title_main_ask">问答</string>
    <string name="frame_title_community_department">部门</string>
    <string name="frame_title_community_business">商家</string>
    <string name="frame_title_main_market">市场</string>
    <string name="pub_comment_error">发表评论出错...</string>
    <string name="main_fragment_load_data_error">获取数据出错...</string>
    <string name="user_login_out_of_date">登陆已过时,请重新登陆...</string>
    <string name="comment_reply_title">---共有 %d 条评论---</string>
    <string name="account_account">帐号</string>
    <string name="account_mobile">手机号</string>
    <string name="account_password">密码</string>
    <string name="title_vcode">验证码</string>
    <string name="vcode_refresh">换一换</string>
    <string name="account_hint_normal">请输入您注册的邮箱</string>
    <string name="account_login_loading">登录…</string>
    <string name="account_protocol">协议条款</string>
    <string name="account_login">登录</string>
    <string name="account_regedit">注册</string>
    <string name="account_logining">正在登录中…</string>
    <string name="title_login">登录百度帐号</string>
    <string name="check_username">检测用户名</string>
    <string name="name_not_use">恭喜你,该用户名还没有被注册过!</string>
    <string name="input_name">请输入用户名</string>
    <string name="account_regedit_baidu">注册百度帐号</string>
    <string name="user">用户名</string>
    <string name="show">显示</string>
    <string name="hide">隐藏</string>
    <string name="reg_info">点击注册表示已阅读并同意</string>
    <string name="activation_code">激活码</string>
    <string name="no_receive_code">没有收到激活码?</string>
    <string name="resend_code">点击重发激活码</string>
    <string name="resend_code_second">在%d秒后点击重发激活码</string>
    <string name="user_server_agreement">用户服务协议</string>
    <string name="input_active_code">请输入6位激活码</string>
    <string name="user_name_rule">请输入邮箱您的常用邮箱</string>
    <string name="user_psw_rule">6–14位,字母区分大小写</string>
    <string name="change_vcode">换一张</string>
    <string name="psw_tip">密　码</string>
    <string name="picture_unchecked">请选择图片哦~！</string>
    <string name="old_password">请输入旧密码</string>
    <string name="new_password">新密码</string>
    <string name="current_password">当前密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="new_password_prompt">请输入新密码</string>
    <string name="new_password_prompt_again">请再次输入新密码</string>
    <string name="confirm">确认</string>
    <string name="suggest_fail">反馈失败</string>
    <string name="suggest_success">反馈成功</string>

</resources>